# NJC

./: .env.example  .gitignore  README.md  TODO.md  drizzle.config.ts  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/workflows/: platform-ci.yml  studio-packages.yml
animations/: test.pani
apps/cdn/: README.md  package.json  vercel.json
apps/employee/: app.config.ts  package.json  tsconfig.json
apps/mobile/: README.md  app.json  package.json  tsconfig.json
apps/platform-playground/: next.config.ts  package.json  tsconfig.json
apps/roku/: Makefile  README.md  bsconfig.json  manifest  package.json
apps/tv/: App.tsx  README.md  app.json  eas.json  package.json  tsconfig.json
apps/web/: .env.example  drizzle.config.ts  next.config.ts  package.json  vercel.json
docs/: ADVERTISING.md  ARCHITECTURE.md  CDN.md  DOMAIN_LAUNCH.md  EMPLOYEE_APP.md  IMPLEMENTATION_REPORT_2026-07-14.md  MOBILE_API.md  PORTABLE_BACKUP.md  PRESS_KIT.md  PROFIT_AND_MONETIZATION.md  PROJECT_AUDIT_2026-07-14.md  PUSH_REPORT_2026-07-15.md  PUSH_REPORT_2026-07-17.md  SEO.md  TV_PAIRING.md
docs/brand/: ASSET_CATALOG.md  BRAND_GUIDE.md
drizzle/: 0000_graceful_red_shift.sql  0003_wooden_thena.sql
drizzle/meta/: 0004_snapshot.json  (+1 more)
platform/: README.md  package.json  tsconfig.build.json  tsconfig.json
platform/sdks/c-abi/: CMakeLists.txt
platform/sdks/c-abi/include/: platform_runtime.h
platform/sdks/c-abi/src/: platform_runtime.cpp
platform/sdks/c-abi/tests/: smoke.cpp
scripts/: export-portable.ts  seed.ts  sync-cdn-assets.mjs
tests/: api-keys.test.ts
tools/studio/src-tauri/: Cargo.toml  tauri.conf.json
tools/studio/src-tauri/capabilities/: main.json
tools/studio/src-tauri/icons/: icon.icns
tools/studio/src-tauri/src/: main.rs
visual-feature-platform/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
(+632 files in other folders)
