cmake_minimum_required(VERSION 3.20)
project(platform_runtime LANGUAGES C CXX)
add_library(platform_runtime STATIC src/platform_runtime.cpp)
target_include_directories(platform_runtime PUBLIC include)
target_compile_features(platform_runtime PUBLIC cxx_std_17)
add_executable(platform_runtime_smoke tests/smoke.cpp)
target_link_libraries(platform_runtime_smoke PRIVATE platform_runtime)
enable_testing()
add_test(NAME platform_runtime_smoke COMMAND platform_runtime_smoke)
